--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="form-validation.css" rel="stylesheet">
-    <script src="js/app.js" defer></script>
+    <script src="js/app.js" type="module" defer></script>
   </head>
   <body class="bg-light">
     
@@ -48,7 +47,7 @@
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-primary">Rechercher</span>
-          <span class="badge bg-primary rounded-pill" id="result-count">3</span>
+          <span class="badge bg-primary rounded-pill" id="result-count">0</span>
         </h4>
         <ul class="list-group mb-3">
           <li class="list-group-item lh-sm">
@@ -96,7 +95,5 @@
     </ul>
   </footer>
 </div>
-
-      <script src="form-validation.js"></script>
   </body>
 </html>
