--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p class="lead">Trouvez la relation qui vous arrangera.</p>
     </div>
 
-    <div class="row g-5">
+    <div class="row g-lg-5">
       <div class="col-md-5 col-lg-4 order-md-last">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-primary">Rechercher</span>
@@ -69,7 +69,7 @@
             </div>
           </li>
           <li class="list-group-item lh-sm">
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <div class="d-grid gap-2 d-flex justify-content-end">
               <button id="search" class="btn btn-secondary">Rechercher</button>
               <button id="reverse" class="btn btn-primary d-flex align-items-center"><span class="material-icons-round">compare_arrows</span></button>
             </div>
@@ -89,11 +89,6 @@
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
     <p class="mb-1">&copy; 2017–2021 SBB CFF FFS</p>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Privacy</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Support</a></li>
-    </ul>
   </footer>
 </div>
   </body>
