--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
     <title>SBB CFF FFS</title>
 
     <!-- Bootstrap core CSS -->
@@ -53,7 +54,7 @@
           <li class="list-group-item lh-sm">
             <div>
               <h6 class="my-0 mb-2 d-flex justify-content-between">Départ</h6>
-              <input type="text" class="form-control" id="from">
+              <input type="text" class="form-control" value="Cronay, le Crêt" id="from">
               <ul class="dropdown-menu" id="from-suggest">
               </ul>
             </div>
@@ -62,7 +63,7 @@
             <div>
               <div class="dropdown">
                 <h6 class="my-0 mb-2 d-flex justify-content-between">Arrivée</h6>
-                <input type="text" class="form-control" id="to">
+                <input type="text" class="form-control" value="Ste-Croix" id="to">
                 <ul class="dropdown-menu" id="to-suggest">
                 </ul>
               </div>
