"Ajout de l'affichage des phases de changement à pied"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="list-group-item lh-sm">
             <div>
               <h6 class="my-0 mb-2 d-flex justify-content-between">Départ</h6>
-              <input type="text" class="form-control" value="Cronay, le Crêt" id="from">
+              <input type="text" class="form-control" value="" id="from">
               <ul class="dropdown-menu" id="from-suggest">
               </ul>
             </div>
@@ -63,7 +63,7 @@
             <div>
               <div class="dropdown">
                 <h6 class="my-0 mb-2 d-flex justify-content-between">Arrivée</h6>
-                <input type="text" class="form-control" value="Ste-Croix" id="to">
+                <input type="text" class="form-control" value="" id="to">
                 <ul class="dropdown-menu" id="to-suggest">
                 </ul>
               </div>
