--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
           rel="stylesheet">
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -39,7 +40,7 @@
 <div class="container">
   <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="assets/logo.svg" alt="" width="200" height="57">
+      <img class="d-block mx-auto mb-4" src="assets/logo_DR.svg" alt="" width="50" height="50">
       <h2>Horaires</h2>
       <p class="lead">Trouvez la relation qui vous arrangera.</p>
     </div>
@@ -89,7 +90,7 @@
   </main>
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
-    <p class="mb-1">&copy; 2017–2021 SBB CFF FFS</p>
+    <p class="mb-1">&copy; 2017–2021 Dimitri RUTZ</p>
   </footer>
 </div>
   </body>
