--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +46,7 @@
     </div>
 
     <div class="row g-lg-5">
-      <div class="col-md-5 col-lg-4 order-md-last">
+      <div class="col-md-5 col-lg-4 order-md-last mb-xs-1">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-primary">Rechercher</span>
           <span class="badge bg-primary rounded-pill" id="result-count">0</span>
@@ -55,7 +55,14 @@
           <li class="list-group-item lh-sm">
             <div>
               <h6 class="my-0 mb-2 d-flex justify-content-between">Départ</h6>
-              <input type="text" class="form-control" value="" id="from">
+              <div class="position-relative">
+                <input type="text" class="form-control" value="" id="from">
+                <div class="position-absolute top-50 end-0 translate-middle">
+                  <span class="spinner-border spinner-border-sm invisible" role="status">
+                    <span class="visually-hidden">New alerts</span>
+                  </span>
+                </div>
+              </div>
               <ul class="dropdown-menu" id="from-suggest">
               </ul>
             </div>
@@ -64,7 +71,14 @@
             <div>
               <div class="dropdown">
                 <h6 class="my-0 mb-2 d-flex justify-content-between">Arrivée</h6>
-                <input type="text" class="form-control" value="" id="to">
+                <div class="position-relative">
+                  <input type="text" class="form-control" value="" id="to">
+                  <div class="position-absolute top-50 end-0 translate-middle">
+                    <span class="spinner-border spinner-border-sm invisible" role="status">
+                      <span class="visually-hidden">New alerts</span>
+                    </span>
+                  </div>
+                </div>
                 <ul class="dropdown-menu" id="to-suggest">
                 </ul>
               </div>
@@ -81,9 +95,7 @@
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Résultats</h4>
         <div class="accordion text-center" id="accordion">
-
-
-
+          <img style="width: 50%;" src="assets/search.svg">
         </div>
       </div>
     </div>
